aprementar o gerenciador de tarefas

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     --navbar: #292424;
 }
 
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: var(--background) !important;
 }
