--- a/css/tarefas.css
+++ b/css/tarefas.css
@@ -12,8 +12,8 @@ body {
 
 button {
     background-color: white !important;
-    color: #102f5e !important;
-    border: 2px solid #102f5e !important;
+    color: black !important;
+    border: 2px solid black !important;
     padding: 0.3rem 0.6rem;
     font-size: 1rem;
     cursor: pointer;
@@ -24,7 +24,7 @@ button {
 }
 
 button:hover {
-    background-color: #102f5e !important;
+    background-color: black !important;
 }
 
 button:hover > i {
@@ -33,7 +33,7 @@ button:hover > i {
 
 button i {
     pointer-events: none;
-    color: #102f5e;
+    color: black;
     font-weight: bold;
 }
 
@@ -50,7 +50,7 @@ button i {
 }
 
 .btn-Success {
-    background-color: white !important;
+    background-color: #198653 !important;
     color: #198653 !important;
     border: 2px solid #198653 !important;
 }
@@ -62,14 +62,19 @@ button i {
 }
 
 .fa-check-double {
-    color: #198653 !important;
-    border: 2px solid white !important;
+    color: #ffffff !important;
 }
 
-.fa-check-double:hover {
-    background-color: white !important;
-    color: white !important;
-    border: 2px solid white !important;
+.finish-todo:hover {
+    background-color: #198653 !important;
+}
+
+.edit-todo:hover {
+    background-color: #0dc8ee !important;
+}
+
+.remove-todo:hover {
+    background-color: #da3544 !important;
 }
 
 input, select {
