--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /*Estilo Global*/
 
 :root {
-    --background: #332d2d;
-    --navbar: #292424;
+    --background: #000308;
+    --navbar: #070a0f;
 }
 
 * {
@@ -12,4 +12,8 @@
 
 body {
     background-color: var(--background) !important;
+}
+
+.logo {
+    background-color: rgba(255, 255, 255, 0.25) !important
 }
